--- a/deliverables/newton/openstack-ansible.yaml
+++ b/deliverables/newton/openstack-ansible.yaml
@@ -1735,3 +1735,75 @@ releases:
         hash: 56ca566ef024603b2fbfd3d0b7af6d844e26884a
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: 27e47df8ad22f01d0a8905ec35ff3bfa916dc89b
+  - version: 14.2.6
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 9e6da24d67e8875cd01dec5d639b09bf2c97e357
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: ea0e5cd10c0d96b50887de544f53d0bcc54949fc
+      - repo: openstack/openstack-ansible-pip_install
+        hash: d3144510bf604f9dda1311c14afaf33c4c502ad6
+      - repo: openstack/openstack-ansible-galera_client
+        hash: d2c8ca9db71e2689a83d94889bf21a319aae617b
+      - repo: openstack/openstack-ansible-galera_server
+        hash: fffeb4bb6639ae231b899f439128565b2ad887b7
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 9e336a5622a8c2d5797c3d9acaf05b4f130d3505
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 9227a79e5c349b4411fd47acc2163fc163d802b3
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: d04c99ab38fbec4a84129188805b215d1b172417
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: df227381ff3d318fcb8d7ab925f1ee66ed161ec8
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 989d6959d04af560d398b93c0ac40f26bcedef4e
+      - repo: openstack/openstack-ansible-security
+        hash: e9e425247ec00b8b2613560c84bdb8404900029c
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: 7ab893b2bcb38ca1654835dfd6251e9b545ef608
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: 4ee5097af7cd646c0abe87992b3865c7e68e66da
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: eafbe337bea94f32fe6fcef8149ec1c786cb8f01
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: ac0a498abb638300380cc769c527d2a195e13ca0
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: ee6257fa4f51ce23b57273f674b543236b658a42
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: c40211fb1c9be2433f35e76609ac1147f86071a3
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 9895b186e7330a20c018200ed669426f64dcb3b5
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 4372bcfd590c9d8e245c35c9cfef8c3be6df073b
+      - repo: openstack/openstack-ansible-os_heat
+        hash: d2f8d380b3bf3560befe35cfbf844e177ee5ca2d
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: 8205d48b4c44dfbae067883049f8f558fa2a685f
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: 78a45df5877e79a8ecc2ce120fa00aae13c243aa
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 8acd8217ebdcdab664e0f4f6b5bd6ee0f62edca4
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 3267fb983c5b9c090b1784986280ba9bc11fca97
+      - repo: openstack/openstack-ansible-os_nova
+        hash: c4468e6dedc65b19d3a8756b560dcf1c764983dd
+      - repo: openstack/openstack-ansible-os_rally
+        hash: 84c626fc93b34a3a61758be73ae70320cca9aa2d
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: aeb5cdc728eea8f8a63fd29443e0be911ea2e6c1
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 9e91824884fb695c6094baaa2ce22b6a501ef0bd
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 64cb58375999eaa8dbe0e6714fabed60d128b0d1
+      - repo: openstack/openstack-ansible-plugins
+        hash: f49519df7f07a4b0ab487479598fa150d7ed7e1a
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: 6009b6508ee1e6c3bd1b04abbfa4e03e2c505e3d
+      - repo: openstack/openstack-ansible-repo_build
+        hash: 86b778e1d1bb1b558757d824f4252c8cb963f5cd
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 3e76ad38d35929ef299635887e197688e66589f8
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: 56ca566ef024603b2fbfd3d0b7af6d844e26884a
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: 27e47df8ad22f01d0a8905ec35ff3bfa916dc89b
