--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -121,3 +121,7 @@ releases:
     projects:
       - repo: openstack/openstackdocstheme
         hash: f7a7a739ba68bdad82c8fa9916047d4ad428f8fd
+  - version: 1.12.0
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: 47e20ca671a34c88f403368e3b39744662f0f5d3
