--- a/deliverables/pike/monasca-log-api.yaml
+++ b/deliverables/pike/monasca-log-api.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/monasca-log-api
         hash: 24165340609c142538b89f467c71f7b4713760e8
+  - version: 2.2.0
+    projects:
+      - repo: openstack/monasca-log-api
+        hash: 94885f91a92ae824b684107f023801e943c79081
