--- a/deliverables/ocata/monasca-log-api.yaml
+++ b/deliverables/ocata/monasca-log-api.yaml
@@ -23,3 +23,7 @@ releases:
     projects:
       - repo: openstack/monasca-log-api
         hash: 9bc6c9c76872e7d9aad6c0fca5723d3f35140264
+  - version: 1.4.2
+    projects:
+      - repo: openstack/monasca-log-api
+        hash: f52802f00c9f5fa16a8fc7ef325539c8a49b5da7
