--- a/deliverables/pike/python-barbicanclient.yaml
+++ b/deliverables/pike/python-barbicanclient.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: 82b7d64547d6142e6e3746800aaa8c740d79ccd5
+  - version: 4.4.0
+    projects:
+      - repo: openstack/python-barbicanclient
+        hash: 439ee25dc6c998e5571022ce0094a10c2611d717
