--- a/deliverables/ocata/monasca-kibana-plugin.yaml
+++ b/deliverables/ocata/monasca-kibana-plugin.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/monasca-kibana-plugin
         hash: 85eaa51a10f1bba265bbfe8e20e4c342461427e7
+  - version: 1.0.1
+    projects:
+      - repo: openstack/monasca-kibana-plugin
+        hash: 7019ff7504459603ee07c2c33eee7b3f32911981
