Add oslo releases for July 3, 2017
Change-Id: I15f3b09a620150922994bbeb05b8c9a3fcb13fae

--- a/deliverables/pike/castellan.yaml
+++ b/deliverables/pike/castellan.yaml
@@ -24,3 +24,7 @@ releases:
     projects:
       - repo: openstack/castellan
         hash: 7608bd1fada73ae620714da2b1c60e8b5fbc4725
+  - version: 0.11.0
+    projects:
+      - repo: openstack/castellan
+        hash: 1b3f5f3f90cec737fe45280d948b8fadbb049873
