--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -45,3 +45,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: 83d69f888f6c9bb89ae1e02e21b85422183efb41
+- version: 4.7.0
+  projects:
+  - repo: openstack/oslo.config
+    hash: 4848dfece9167cc310897d03df0263de4853572c
