--- a/deliverables/pike/oslo.context.yaml
+++ b/deliverables/pike/oslo.context.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/oslo.context
     hash: d0f8de0eb6dc9b88632a6566880e4902f1597560
+- version: 2.16.0
+  projects:
+  - repo: openstack/oslo.context
+    hash: 3ce185402ede727be4759e6f64813dace6167b89
