--- a/deliverables/pike/oslo.db.yaml
+++ b/deliverables/pike/oslo.db.yaml
@@ -33,3 +33,7 @@ releases:
   projects:
   - repo: openstack/oslo.db
     hash: c5303957300642796f6dc383657ea7c5787bd11a
+- version: 4.24.0
+  projects:
+  - repo: openstack/oslo.db
+    hash: fe64db1d45fdf3ea9e6b9a7524d24f8626aae2af
