--- a/deliverables/pike/oslo.middleware.yaml
+++ b/deliverables/pike/oslo.middleware.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/oslo.middleware
     hash: 3d6505374192840b23ff6e955a4519ba99daa677
+- version: 3.29.1
+  projects:
+  - repo: openstack/oslo.middleware
+    hash: 9537eba5214622f7d2449dab846c194d0108f055
