--- a/deliverables/pike/oslo.policy.yaml
+++ b/deliverables/pike/oslo.policy.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/oslo.policy
     hash: deffa995a6bab78fd53ea1f0c31f7ae817759bbb
+- version: 1.24.0
+  projects:
+  - repo: openstack/oslo.policy
+    hash: ded939ba7117ad7c919182b9b30152408e4071ce
