--- a/deliverables/pike/oslo.privsep.yaml
+++ b/deliverables/pike/oslo.privsep.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.privsep
     hash: 1974564d9ac6268c39cc80b8d1c8f4064b70a55d
+- version: 1.21.0
+  projects:
+  - repo: openstack/oslo.privsep
+    hash: 8ed579aa60f756303bd54451ab78699054ed050a
