--- a/deliverables/pike/oslo.reports.yaml
+++ b/deliverables/pike/oslo.reports.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/oslo.reports
     hash: 32e3eee34288baac4c3212ac144c40d7bbad8ff2
+- version: 1.21.0
+  projects:
+  - repo: openstack/oslo.reports
+    hash: 05f4484cbcc7594d4fb709467414c6b22b0d6137
