--- a/deliverables/pike/oslo.serialization.yaml
+++ b/deliverables/pike/oslo.serialization.yaml
@@ -14,3 +14,7 @@ releases:
   projects:
   - repo: openstack/oslo.serialization
     hash: e6764d4010a86cf6b49012daeab1c4f546b9e13e
+- version: 2.19.0
+  projects:
+  - repo: openstack/oslo.serialization
+    hash: 05156012457e5d708595ababe8361457f8377f53
