--- a/deliverables/pike/oslo.service.yaml
+++ b/deliverables/pike/oslo.service.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.service
     hash: 8f67ed7d530770417e462d569ef413a0300c0e66
+- version: 1.24.0
+  projects:
+  - repo: openstack/oslo.service
+    hash: ca3a40a3df93c1968a9dd4f5660abce9c8f25c41
