--- a/deliverables/pike/oslo.versionedobjects.yaml
+++ b/deliverables/pike/oslo.versionedobjects.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/oslo.versionedobjects
     hash: a94c060e490521caa50dc2deabc2b3a9e72e6990
+- version: 1.25.0
+  projects:
+  - repo: openstack/oslo.versionedobjects
+    hash: ec05ef405d666f46c6c6b9372edf75d510cab6db
