--- a/deliverables/pike/oslo.vmware.yaml
+++ b/deliverables/pike/oslo.vmware.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.vmware
     hash: 49c5999903d48ec21de77bef9f9f630ee2087515
+- version: 2.22.0
+  projects:
+  - repo: openstack/oslo.vmware
+    hash: 5b01c09e86cefddcee90ed31735e17e8261a81e5
