--- a/deliverables/pike/oslotest.yaml
+++ b/deliverables/pike/oslotest.yaml
@@ -13,3 +13,7 @@ releases:
   projects:
   - repo: openstack/oslotest
     hash: 83797a6953df1ee4d39fb2cc33bb486aca0ed2ee
+- version: 2.16.0
+  projects:
+  - repo: openstack/oslotest
+    hash: cb641f70f48758f4f532271e81e324fd79a97a7a
