--- a/deliverables/pike/osprofiler.yaml
+++ b/deliverables/pike/osprofiler.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/osprofiler
     hash: 46765b104dc58b8d58213771896f9e3cb253fc68
+- version: 1.10.1
+  projects:
+  - repo: openstack/osprofiler
+    hash: 343fe299bf637762f8da680d7d7b5f6117b1661b
