--- a/deliverables/pike/tooz.yaml
+++ b/deliverables/pike/tooz.yaml
@@ -54,3 +54,7 @@ releases:
   projects:
   - repo: openstack/tooz
     hash: ee66b6e4e416569cb8d51a9b19263c22c6e1f87d
+- version: 1.57.3
+  projects:
+  - repo: openstack/tooz
+    hash: e6274bdd5b36f7b114e255c258659223ba921773
