--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -125,3 +125,7 @@ releases:
     projects:
       - repo: openstack/openstackdocstheme
         hash: 47e20ca671a34c88f403368e3b39744662f0f5d3
+  - version: 1.13.0
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: 0daee5c3c88f49c1333e46ccf26b05652ecc2749
