--- a/deliverables/newton/puppet-swift.yaml
+++ b/deliverables/newton/puppet-swift.yaml
@@ -48,3 +48,7 @@ releases:
     projects:
       - repo: openstack/puppet-swift
         hash: 1d4afc04b479b7b376e00e217086ae96eb69a18b
+  - version: 9.6.0
+    projects:
+      - repo: openstack/puppet-swift
+        hash: d42438428504ead7aac68e49289c03e97ca099fa
