--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -21,3 +21,7 @@ releases:
     projects:
       - repo: openstack/os-brick
         hash: 32ab0d1670e94c9d667207c72cfabe1d6554515f
+  - version: 1.15.0
+    projects:
+      - repo: openstack/os-brick
+        hash: a1b0dda617c915441d5cdcb8c34933bb96b31bac
