Tag Django-OpenStack-Auth Pike Intermediary Release (3.3.0)
Change-Id: I2d6ea716da09fa175b191504dc3afc7942740bbb

--- a/deliverables/pike/django_openstack_auth.yaml
+++ b/deliverables/pike/django_openstack_auth.yaml
@@ -12,3 +12,10 @@ releases:
     highlights: >
       This release inproves translation support, and raises the maximum Django
       version
+  - version: 3.3.0
+    projects:
+      - repo: openstack/django_openstack_auth
+        hash: c15dfe5acd58efa0c5c27dd19de5d4ef2a880c36
+    highlights: >
+      This release improves translation support, raises the maximum Django
+      version, and adds support for a configurable domain dropdown on login.
