Pike: release os-traits 0.3.2
This release supports new traits for:
 - GPU resources
 - NIC offloading.

Change-Id: I89380d73d4ae53d5a7e530b5c9d98b893af1e360

--- a/deliverables/pike/os-traits.yaml
+++ b/deliverables/pike/os-traits.yaml
@@ -22,3 +22,7 @@ releases:
     projects:
       - repo: openstack/os-traits
         hash: 789ce955eac04adb71ec5f2bc4890dd8c86c7ceb
+  - version: 0.3.2
+    projects:
+      - repo: openstack/os-traits
+        hash: c091deb9b5540e02d72488883228ef426fb737e7
