--- a/deliverables/newton/ceilometermiddleware.yaml
+++ b/deliverables/newton/ceilometermiddleware.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/ceilometermiddleware
         hash: a170716d3fc19dc0abf41ff69733ac503c71f757
+  - version: 0.5.2
+    projects:
+      - repo: openstack/ceilometermiddleware
+        hash: 4252674cbddd656389ef2d0a1a6c9d881660df96
