--- a/deliverables/ocata/ceilometermiddleware.yaml
+++ b/deliverables/ocata/ceilometermiddleware.yaml
@@ -17,3 +17,7 @@ releases:
     projects:
       - repo: openstack/ceilometermiddleware
         hash: f311cd211e3bc36a4a57bb54bc41a07574d9e2af
+  - version: 1.0.3
+    projects:
+      - repo: openstack/ceilometermiddleware
+        hash: 387c1797c54fae5d12cc3545475e6d3386d85b41
