--- a/deliverables/pike/cliff.yaml
+++ b/deliverables/pike/cliff.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/cliff
     hash: c548b7b44cb6108d3f20453d9b3db8f8f7e48b19
+- version: 2.8.0
+  projects:
+  - repo: openstack/cliff
+    hash: d025ad9cd35189c363e89a82395c54f504264aa7
