--- a/deliverables/pike/os-client-config.yaml
+++ b/deliverables/pike/os-client-config.yaml
@@ -12,3 +12,7 @@ releases:
     highlights: >
       Add floating IP indicator, skip yaml loading flag, some microversion
       support, vendor updates, User-Agent support
+  - version: 1.28.0
+    projects:
+      - repo: openstack/os-client-config
+        hash: f74902b0b9f82e221b1ae1af7f254dc2918f96b8
