--- a/deliverables/pike/osc-lib.yaml
+++ b/deliverables/pike/osc-lib.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/osc-lib
     hash: 361789fb59593e41a48d9e92a15df122ccfc9b3f
+- version: 1.7.0
+  projects:
+  - repo: openstack/osc-lib
+    hash: 7e7cecbde3de4cbdd3908dc05cc5c934cac60082
