--- a/deliverables/pike/python-troveclient.yaml
+++ b/deliverables/pike/python-troveclient.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/python-troveclient
         hash: 70da3725f4653084697d2fbbe42a997e87e0ed45
+  - version: 2.11.0
+    projects:
+      - repo: openstack/python-troveclient
+        hash: 555ba5ed690027088358288c9b0252d5a58bdc0d
