--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -71,3 +71,7 @@ releases:
     projects:
       - repo: openstack/pymod2pkg
         hash: 8078e866fc0f9d249be38e892881153cb0afc8d8
+  - version: 0.8.0
+    projects:
+      - repo: openstack/pymod2pkg
+        hash: 14a0e8dcdd59966dea00814c2103455e6c0a5164
