--- a/deliverables/pike/monasca-log-api.yaml
+++ b/deliverables/pike/monasca-log-api.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/monasca-log-api
         hash: 94885f91a92ae824b684107f023801e943c79081
+  - version: 2.2.1
+    projects:
+      - repo: openstack/monasca-log-api
+        hash: 022147484eb7940b4df8e27c13cc4f13c56decef
