Add oslo releases for July 10, 2017
Change-Id: I7f5c51c16b586e1a0057613c380e5cdd7f920841

--- a/deliverables/pike/automaton.yaml
+++ b/deliverables/pike/automaton.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/automaton
     hash: f33976e904237c5d65438a12166d85e070484ccf
+- version: 1.11.0
+  projects:
+  - repo: openstack/automaton
+    hash: 6c5dbfcd09fbc96e24366fc82baa974cab7d9bf7
