--- a/deliverables/pike/castellan.yaml
+++ b/deliverables/pike/castellan.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/castellan
         hash: 1b3f5f3f90cec737fe45280d948b8fadbb049873
+  - version: 0.11.1
+    projects:
+      - repo: openstack/castellan
+        hash: 54b1b52533efa255852f342342b2fdc33b5c3a4e
