--- a/deliverables/pike/debtcollector.yaml
+++ b/deliverables/pike/debtcollector.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/debtcollector
     hash: d2f3f45ceb6dcf5b753e53ef8e1441efd09c2c93
+- version: 1.16.0
+  projects:
+  - repo: openstack/debtcollector
+    hash: 9d3fbc726fb4bb5699bb6eec2dfeb51cc0e762f0
