--- a/deliverables/pike/futurist.yaml
+++ b/deliverables/pike/futurist.yaml
@@ -22,3 +22,7 @@ releases:
   projects:
   - repo: openstack/futurist
     hash: fba366a839288efa8f92dab607adf5550c4fa7d5
+- version: 1.2.0
+  projects:
+  - repo: openstack/futurist
+    hash: 41709d75e8157888631d5df589d217c2b871944f
