--- a/deliverables/pike/oslo.cache.yaml
+++ b/deliverables/pike/oslo.cache.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/oslo.cache
     hash: 5ff0006de1c4e09c6254e7d2ce11dbb436c5645f
+- version: 1.24.0
+  projects:
+  - repo: openstack/oslo.cache
+    hash: 6423e08a69c128d4eb826c4e584c7ebc4f7727c1
