--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -49,3 +49,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: 4848dfece9167cc310897d03df0263de4853572c
+- version: 4.8.0
+  projects:
+  - repo: openstack/oslo.config
+    hash: 938077097f3bfbaac621909774f405b101236b48
