--- a/deliverables/pike/oslo.db.yaml
+++ b/deliverables/pike/oslo.db.yaml
@@ -37,3 +37,7 @@ releases:
   projects:
   - repo: openstack/oslo.db
     hash: fe64db1d45fdf3ea9e6b9a7524d24f8626aae2af
+- version: 4.24.1
+  projects:
+  - repo: openstack/oslo.db
+    hash: 23e431b0deb0d4b50f60f7f50f44fb5942c2fc76
