--- a/deliverables/pike/oslo.i18n.yaml
+++ b/deliverables/pike/oslo.i18n.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/oslo.i18n
     hash: b9eed4996137f006f4cc9c72bf60d17fd344bb4e
+- version: 3.16.0
+  projects:
+  - repo: openstack/oslo.i18n
+    hash: b783b44ebad97724536a3d9b82130aa13f1fa140
