--- a/deliverables/pike/oslo.log.yaml
+++ b/deliverables/pike/oslo.log.yaml
@@ -45,3 +45,7 @@ releases:
   projects:
   - repo: openstack/oslo.log
     hash: 527a76e4e33a980c925315dc7700afcb060c365c
+- version: 3.29.0
+  projects:
+  - repo: openstack/oslo.log
+    hash: 4e9d16d30b97d1f4ecd0b6aa313f62ddd8236922
