--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -57,3 +57,7 @@ releases:
   projects:
   - repo: openstack/oslo.messaging
     hash: 2fb4a216cc94e96db6fdb8c20ed4d278d15ba1fe
+- version: 5.29.0
+  projects:
+  - repo: openstack/oslo.messaging
+    hash: cbf56b0afdd83e1393b6b3504fc34d03d58a7ad7
