--- a/deliverables/pike/oslo.middleware.yaml
+++ b/deliverables/pike/oslo.middleware.yaml
@@ -33,3 +33,7 @@ releases:
   projects:
   - repo: openstack/oslo.middleware
     hash: 9537eba5214622f7d2449dab846c194d0108f055
+- version: 3.29.2
+  projects:
+  - repo: openstack/oslo.middleware
+    hash: 7af4801aad4243c73eaa3d092c92d823cda89510
