--- a/deliverables/pike/oslo.policy.yaml
+++ b/deliverables/pike/oslo.policy.yaml
@@ -33,3 +33,7 @@ releases:
   projects:
   - repo: openstack/oslo.policy
     hash: ded939ba7117ad7c919182b9b30152408e4071ce
+- version: 1.24.1
+  projects:
+  - repo: openstack/oslo.policy
+    hash: 5d76e78009018e5bde3154c49cbe6af46dc28b35
