--- a/deliverables/pike/oslo.privsep.yaml
+++ b/deliverables/pike/oslo.privsep.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.privsep
     hash: 8ed579aa60f756303bd54451ab78699054ed050a
+- version: 1.21.1
+  projects:
+  - repo: openstack/oslo.privsep
+    hash: 8c96cfd08c2976c722d6d09b54e99fabdc24ac51
