--- a/deliverables/pike/oslo.reports.yaml
+++ b/deliverables/pike/oslo.reports.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.reports
     hash: 05f4484cbcc7594d4fb709467414c6b22b0d6137
+- version: 1.21.1
+  projects:
+  - repo: openstack/oslo.reports
+    hash: 1481aaf84e9c1b4b7f57631a59d51bdd1d439d90
