--- a/deliverables/pike/oslo.rootwrap.yaml
+++ b/deliverables/pike/oslo.rootwrap.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/oslo.rootwrap
     hash: ec8f632fe58b230d1001a4075b6b0ee9c4c278f3
+- version: 5.8.0
+  projects:
+  - repo: openstack/oslo.rootwrap
+    hash: eb7ef1567da29969ded383f522b27389ad9be11a
