--- a/deliverables/pike/oslo.serialization.yaml
+++ b/deliverables/pike/oslo.serialization.yaml
@@ -18,3 +18,7 @@ releases:
   projects:
   - repo: openstack/oslo.serialization
     hash: 05156012457e5d708595ababe8361457f8377f53
+- version: 2.19.1
+  projects:
+  - repo: openstack/oslo.serialization
+    hash: 2a29a5e8363b43c875cf1b8694b3cf577f62b464
