--- a/deliverables/pike/oslo.service.yaml
+++ b/deliverables/pike/oslo.service.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.service
     hash: ca3a40a3df93c1968a9dd4f5660abce9c8f25c41
+- version: 1.24.1
+  projects:
+  - repo: openstack/oslo.service
+    hash: 21de4a7c510ff0356c5c557d4c50bbc755052785
