--- a/deliverables/pike/oslo.utils.yaml
+++ b/deliverables/pike/oslo.utils.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.utils
     hash: 15e014063c4273dd3892ea3edc182721e5e61fd2
+- version: 3.27.0
+  projects:
+  - repo: openstack/oslo.utils
+    hash: 0f3ea232b750deff33a6106c37a169891872ee93
