--- a/deliverables/pike/oslo.versionedobjects.yaml
+++ b/deliverables/pike/oslo.versionedobjects.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.versionedobjects
     hash: ec05ef405d666f46c6c6b9372edf75d510cab6db
+- version: 1.25.1
+  projects:
+  - repo: openstack/oslo.versionedobjects
+    hash: dcb1c0591912ac936951c220506192883f70ae76
