--- a/deliverables/pike/oslo.vmware.yaml
+++ b/deliverables/pike/oslo.vmware.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.vmware
     hash: 5b01c09e86cefddcee90ed31735e17e8261a81e5
+- version: 2.22.1
+  projects:
+  - repo: openstack/oslo.vmware
+    hash: c5aed4fe30a3e3d9e82ca57015668cedc1394ed1
