--- a/deliverables/pike/oslosphinx.yaml
+++ b/deliverables/pike/oslosphinx.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslosphinx
     hash: 9605448df6a438fd75dadcfd315af6d4ef8436d0
+- version: 4.15.1
+  projects:
+  - repo: openstack/oslosphinx
+    hash: 1cb173e6a798906f6f205b1241625bb62fb6f8df
