--- a/deliverables/pike/oslotest.yaml
+++ b/deliverables/pike/oslotest.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/oslotest
     hash: cb641f70f48758f4f532271e81e324fd79a97a7a
+- version: 2.16.1
+  projects:
+  - repo: openstack/oslotest
+    hash: 952b6225d5134b4e18d08efb9347aa7198235a5f
