--- a/deliverables/pike/stevedore.yaml
+++ b/deliverables/pike/stevedore.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/stevedore
     hash: 91c2e418f5b2a3f9f638400a7005bead4ce5b26f
+- version: 1.24.0
+  projects:
+  - repo: openstack/stevedore
+    hash: 7357e8aef053cf3d7c3268a794f0d70c86c7ade1
