--- a/deliverables/pike/tooz.yaml
+++ b/deliverables/pike/tooz.yaml
@@ -58,3 +58,7 @@ releases:
   projects:
   - repo: openstack/tooz
     hash: e6274bdd5b36f7b114e255c258659223ba921773
+- version: 1.57.4
+  projects:
+  - repo: openstack/tooz
+    hash: 38bcf7bbdb4a5f53ac81d45f2b7c310e5ea5f4da
