--- a/deliverables/pike/mox3.yaml
+++ b/deliverables/pike/mox3.yaml
@@ -9,3 +9,7 @@ releases:
   projects:
   - repo: openstack/mox3
     hash: c9f88a280d902a44686412e73a44106cd299f9e5
+- version: 0.22.0
+  projects:
+  - repo: openstack/mox3
+    hash: 8536be786ca5b1a87e3fafb056d5bb5d4cee4425
