--- a/deliverables/pike/python-ironicclient.yaml
+++ b/deliverables/pike/python-ironicclient.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/python-ironicclient
         hash: 7cceefec2075a585e02c4f1959922ad9fcc4272c
+  - version: 1.14.0
+    projects:
+      - repo: openstack/python-ironicclient
+        hash: bd7ccdde959fff8d07560d78383d1f020019adcd
