Add Queens election to the schedule
Change-Id: I006961073d8d2acebacdd9fcaf4594998f93d798
Depends-On: I1040c022fc647a4aa36a83137708e912e99dd879

--- a/doc/source/pike/schedule.yaml
+++ b/doc/source/pike/schedule.yaml
@@ -113,6 +113,8 @@ cycle:
 - end: '2017-08-04'
   name: R-4
   start: '2017-07-31'
+  project-specific:
+  - q-ptl-nomination
 - end: '2017-08-11'
   name: R-3
   start: '2017-08-07'
@@ -120,6 +122,8 @@ cycle:
   - p-rc1
   - p-hard-sf
   - p-trailing-ff
+  project-specific:
+  - q-ptl-election
 - end: '2017-08-18'
   name: R-2
   start: '2017-08-14'
