--- a/deliverables/pike/tempest.yaml
+++ b/deliverables/pike/tempest.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/tempest
         hash: 517c95fcb7f6eb61550039b6bb3c51d2019662ac
+  - version: 16.1.0
+    projects:
+      - repo: openstack/tempest
+        hash: 19e20abb9311dc3c786d32418966185085af6a3e
