--- a/deliverables/pike/instack.yaml
+++ b/deliverables/pike/instack.yaml
@@ -1,5 +1,10 @@
 ---
 launchpad: tripleo
 release-model: cycle-with-intermediary
+releases:
+- projects:
+  - hash: ec102b19a029d0ca7fcf1267656256b4023cf57e
+    repo: openstack/instack
+  version: 7.0.0
 team: tripleo
 type: library
