--- a/deliverables/ocata/monasca-agent.yaml
+++ b/deliverables/ocata/monasca-agent.yaml
@@ -31,3 +31,7 @@ releases:
     projects:
       - repo: openstack/monasca-agent
         hash: 634f5868527add0be13c95ff9e8e714a6c2fc2ca
+  - version: 1.9.1
+    projects:
+      - repo: openstack/monasca-agent
+        hash: 6d196569a0858c177a6f6d04169a860617f5e48f
