aodh: release 3.0.3 (newton)
Change-Id: I297877e88ac49259a8e922f04ba96a860112d75c

--- a/deliverables/newton/aodh.yaml
+++ b/deliverables/newton/aodh.yaml
@@ -33,3 +33,7 @@ releases:
     projects:
       - repo: openstack/aodh
         hash: 2b50f978aa13374cc11195275f1b114d88d1327d
+  - version: 3.0.3
+    projects:
+      - repo: openstack/aodh
+        hash: f87e0d05c4662c14c7a9f49a0a829cf9bf3edbdb
