aodh: release 4.0.1 (ocata)
Change-Id: Idde8f0778be434ecf20dac7720e4bbe75154a2b9

--- a/deliverables/ocata/aodh.yaml
+++ b/deliverables/ocata/aodh.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/aodh
         hash: 2ad5fb78647f8017e9716292495609408e91b10c
+  - version: 4.0.1
+    projects:
+      - repo: openstack/aodh
+        hash: 38ba0511e7ff75809c4e5ef05b783c56c34ad641
