--- a/deliverables/pike/glance-store.yaml
+++ b/deliverables/pike/glance-store.yaml
@@ -4,3 +4,8 @@ launchpad: glance-store
 release-model: cycle-with-intermediary
 team: glance
 type: library
+releases:
+  - version: 0.21.0
+    projects:
+      - repo: openstack/glance_store
+        hash: 599b9b8491ab22ea238b271c518011f45ead26c2
