--- a/deliverables/ocata/ceilometer.yaml
+++ b/deliverables/ocata/ceilometer.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: 9cfd46c2e4c6cda85d1de118a349b2a9f7440d0c
+  - version: 8.0.2
+    projects:
+      - repo: openstack/ceilometer
+        hash: cd9673fcd73fa5f55f6c439be4bb00468d52ddb7
