--- a/deliverables/_independent/openstack_requirements.yaml
+++ b/deliverables/_independent/openstack_requirements.yaml
@@ -9,3 +9,8 @@ releases:
       - repo: openstack/requirements
         hash: 495027bda42431678845f40f084191623c7b2755
         tarball-base: openstack_requirements
+  - version: 1.1.0
+    projects:
+      - repo: openstack/requirements
+        hash: f5ce4279b968d04674ea32052cfe83f9a1aaddb8
+        tarball-base: openstack_requirements
