--- a/deliverables/newton/magnum.yaml
+++ b/deliverables/newton/magnum.yaml
@@ -24,3 +24,7 @@ releases:
     projects:
       - repo: openstack/magnum
         hash: 41f9d7f1585c52eb30d09405d22cfcf6ff37cba9
+  - version: 3.3.0
+    projects:
+      - repo: openstack/magnum
+        hash: 98f4ae9942ee55c1e7454bb257f21d935c403cb2
