--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -129,3 +129,7 @@ releases:
     projects:
       - repo: openstack/openstackdocstheme
         hash: 0daee5c3c88f49c1333e46ccf26b05652ecc2749
+  - version: 1.14.0
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: 4d2797d14b8d70e63fe699e3c92d6111f6a63e97
