--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -31,5 +31,9 @@ releases:
   - hash: 0b8fa1c7fecf0a95029a25a1e38218e55f085db6
     repo: openstack/tripleo-heat-templates
   version: 6.1.0
+- projects:
+  - hash: 08a89804781d63c8f234244bdd10b9149eaac8bd
+    repo: openstack/tripleo-heat-templates
+  version: 6.2.0
 team: tripleo
 type: other
