--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -25,3 +25,7 @@ releases:
     projects:
       - repo: openstack/os-brick
         hash: a1b0dda617c915441d5cdcb8c34933bb96b31bac
+  - version: 1.15.1
+    projects:
+      - repo: openstack/os-brick
+        hash: 8e4adda001a4935bfcdd0f81209894080f041b23
