--- a/deliverables/newton/congress.yaml
+++ b/deliverables/newton/congress.yaml
@@ -45,3 +45,10 @@ releases:
       - Bug fix to allow cross-policy table reference.
       - Bug fix to correct an incompatibility with PostgreSQL backend.
       - Bug fix for Cinder driver to obtain data from all tenants.
+  - version: 4.1.0
+    projects:
+      - repo: openstack/congress
+        hash: ad610130f5e5102a9fb682e5975b4e4bc0857387
+    highlights: >
+      - Fix to allow Congress startup despite data source creation failure
+      - Bug fix to avoid config generation failure due to deprecated option
