--- a/deliverables/pike/python-karborclient.yaml
+++ b/deliverables/pike/python-karborclient.yaml
@@ -9,3 +9,7 @@ releases:
   projects:
   - repo: openstack/python-karborclient
     hash: cd75dda7bba1875258bb113cfc61efc6d5cd2e3c
+- version: 0.4.0
+  projects:
+  - repo: openstack/python-karborclient
+    hash: 7bb1cc2c7afa6722f3cd5a1bf5dfd6856a8ab4f0
