Requesting kuryr-lib 0.5.0 release
Bumping minor version, since this release includes a bunch of
requirement changes, most notably pyroute2>=0.4.15 compatibility

Change-Id: I9bedc1043a216fced403f6709b04939483d9b841

--- a/deliverables/_independent/kuryr.yaml
+++ b/deliverables/_independent/kuryr.yaml
@@ -23,3 +23,8 @@ releases:
       - repo: openstack/kuryr
         hash: 8bfbc8bdf695778cb0304f7e754123b3d914946c
         tarball-base: kuryr-lib
+  - version: 0.5.0
+    projects:
+      - repo: openstack/kuryr
+        hash: c842d40ef049d50f08d7f226c48f30ec1dfa10e2
+        tarball-base: kuryr-lib
