--- a/deliverables/pike/python-ironicclient.yaml
+++ b/deliverables/pike/python-ironicclient.yaml
@@ -18,3 +18,7 @@ releases:
     projects:
       - repo: openstack/python-ironicclient
         hash: bd7ccdde959fff8d07560d78383d1f020019adcd
+  - version: 1.15.0
+    projects:
+      - repo: openstack/python-ironicclient
+        hash: 035aff25d384c0816176e63ec1c027fbb022f1b4
