New heatclient newton release
This makes a new heatclient release containing an important performance
fix.

Change-Id: I9fc0ced8bc308b5679ee9aa1bf90c4730f3ee754

--- a/deliverables/newton/python-heatclient.yaml
+++ b/deliverables/newton/python-heatclient.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: 144e5a883d1f9f867e4174df3f35661c83ce4da7
+  - version: 1.5.2
+    projects:
+      - repo: openstack/python-heatclient
+        hash: 6c4e27782c5768fef4365d4b0fcfae7eb1da39f2
