Final releases of oslo for Pike
This commit bump each library's minor version due to the final release
for Pike.

Note: this commit doesn't include releases for pylockfile and tooz

Change-Id: I8bea7bf3bea2f048a13ed1e714f87835dfbcb265

--- a/deliverables/pike/automaton.yaml
+++ b/deliverables/pike/automaton.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/automaton
     hash: 6c5dbfcd09fbc96e24366fc82baa974cab7d9bf7
+- version: 1.12.0
+  projects:
+  - repo: openstack/automaton
+    hash: d34d15737f8edefe69f9b6970f83cf63a3fd6d87
