--- a/deliverables/pike/castellan.yaml
+++ b/deliverables/pike/castellan.yaml
@@ -32,3 +32,7 @@ releases:
     projects:
       - repo: openstack/castellan
         hash: 54b1b52533efa255852f342342b2fdc33b5c3a4e
+  - version: 0.12.0
+    projects:
+      - repo: openstack/castellan
+        hash: eaf2aa6cfe8abc5f8e086d88d98a8e24d8f8a8b5
