--- a/deliverables/pike/mox3.yaml
+++ b/deliverables/pike/mox3.yaml
@@ -13,3 +13,7 @@ releases:
   projects:
   - repo: openstack/mox3
     hash: 8536be786ca5b1a87e3fafb056d5bb5d4cee4425
+- version: 0.23.0
+  projects:
+  - repo: openstack/mox3
+    hash: 812983a5fafc8a09e7b9fffbee5336fafab9b231
