--- a/deliverables/pike/oslo.cache.yaml
+++ b/deliverables/pike/oslo.cache.yaml
@@ -33,3 +33,7 @@ releases:
   projects:
   - repo: openstack/oslo.cache
     hash: 6423e08a69c128d4eb826c4e584c7ebc4f7727c1
+- version: 1.25.0
+  projects:
+  - repo: openstack/oslo.cache
+    hash: cfe395f980603040ec40f9e6cf0a98a952f981ad
