--- a/deliverables/pike/oslo.concurrency.yaml
+++ b/deliverables/pike/oslo.concurrency.yaml
@@ -13,3 +13,7 @@ releases:
   projects:
   - repo: openstack/oslo.concurrency
     hash: 555af4b91ba3ee398cdf884daf19ffb15f475c2f
+- version: 3.21.0
+  projects:
+  - repo: openstack/oslo.concurrency
+    hash: 88583edbb478c1a157b58c95c231a0b5a741b78a
