--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -53,3 +53,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: 938077097f3bfbaac621909774f405b101236b48
+- version: 4.9.0
+  projects:
+  - repo: openstack/oslo.config
+    hash: 608a15ea61ae846c07624e869c16d37781c2a8ce
