--- a/deliverables/pike/oslo.context.yaml
+++ b/deliverables/pike/oslo.context.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.context
     hash: 3ce185402ede727be4759e6f64813dace6167b89
+- version: 2.17.0
+  projects:
+  - repo: openstack/oslo.context
+    hash: e86ee74a72f7deb8f75e0ede68bba7ba520c7298
