--- a/deliverables/pike/oslo.db.yaml
+++ b/deliverables/pike/oslo.db.yaml
@@ -41,3 +41,7 @@ releases:
   projects:
   - repo: openstack/oslo.db
     hash: 23e431b0deb0d4b50f60f7f50f44fb5942c2fc76
+- version: 4.25.0
+  projects:
+  - repo: openstack/oslo.db
+    hash: 5f9400d777124a7139c7b65a107f174cba7373d6
