--- a/deliverables/pike/oslo.i18n.yaml
+++ b/deliverables/pike/oslo.i18n.yaml
@@ -33,3 +33,7 @@ releases:
   projects:
   - repo: openstack/oslo.i18n
     hash: b783b44ebad97724536a3d9b82130aa13f1fa140
+- version: 3.17.0
+  projects:
+  - repo: openstack/oslo.i18n
+    hash: faa51d406e9c3e9462d88b08f6bdcc64365f3790
