--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -61,3 +61,7 @@ releases:
   projects:
   - repo: openstack/oslo.messaging
     hash: cbf56b0afdd83e1393b6b3504fc34d03d58a7ad7
+- version: 5.30.0
+  projects:
+  - repo: openstack/oslo.messaging
+    hash: a931af6fd5b5242796239e6134fff3ea608c9280
