--- a/deliverables/pike/oslo.middleware.yaml
+++ b/deliverables/pike/oslo.middleware.yaml
@@ -37,3 +37,7 @@ releases:
   projects:
   - repo: openstack/oslo.middleware
     hash: 7af4801aad4243c73eaa3d092c92d823cda89510
+- version: 3.30.0
+  projects:
+  - repo: openstack/oslo.middleware
+    hash: 1cf39ee5c3739c18fed78946532438550f56356f
