--- a/deliverables/pike/oslo.policy.yaml
+++ b/deliverables/pike/oslo.policy.yaml
@@ -37,3 +37,7 @@ releases:
   projects:
   - repo: openstack/oslo.policy
     hash: 5d76e78009018e5bde3154c49cbe6af46dc28b35
+- version: 1.25.0
+  projects:
+  - repo: openstack/oslo.policy
+    hash: 864042c23edad75d26c918bcb23d9f6da3127dcd
