--- a/deliverables/pike/oslo.reports.yaml
+++ b/deliverables/pike/oslo.reports.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.reports
     hash: 1481aaf84e9c1b4b7f57631a59d51bdd1d439d90
+- version: 1.22.0
+  projects:
+  - repo: openstack/oslo.reports
+    hash: 5e4ea9af13c8ac1d65bf150c6c8970b38d16da51
