--- a/deliverables/pike/oslo.rootwrap.yaml
+++ b/deliverables/pike/oslo.rootwrap.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.rootwrap
     hash: eb7ef1567da29969ded383f522b27389ad9be11a
+- version: 5.9.0
+  projects:
+  - repo: openstack/oslo.rootwrap
+    hash: 1bd761df8e952483d4345b97a00aa327afa79b62
