--- a/deliverables/pike/oslo.serialization.yaml
+++ b/deliverables/pike/oslo.serialization.yaml
@@ -22,3 +22,7 @@ releases:
   projects:
   - repo: openstack/oslo.serialization
     hash: 2a29a5e8363b43c875cf1b8694b3cf577f62b464
+- version: 2.20.0
+  projects:
+  - repo: openstack/oslo.serialization
+    hash: bbee6d1aa13ecd99c72087a77fda1f14274d265f
