--- a/deliverables/pike/oslo.service.yaml
+++ b/deliverables/pike/oslo.service.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/oslo.service
     hash: 21de4a7c510ff0356c5c557d4c50bbc755052785
+- version: 1.25.0
+  projects:
+  - repo: openstack/oslo.service
+    hash: 5a8a712c26cb053cbabf49044e6831ed98a2c2d5
