--- a/deliverables/pike/oslo.utils.yaml
+++ b/deliverables/pike/oslo.utils.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/oslo.utils
     hash: 0f3ea232b750deff33a6106c37a169891872ee93
+- version: 3.28.0
+  projects:
+  - repo: openstack/oslo.utils
+    hash: dd1ceea294b36dc7f3e4546498b092c3fd13875f
