--- a/deliverables/pike/oslo.versionedobjects.yaml
+++ b/deliverables/pike/oslo.versionedobjects.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.versionedobjects
     hash: dcb1c0591912ac936951c220506192883f70ae76
+- version: 1.26.0
+  projects:
+  - repo: openstack/oslo.versionedobjects
+    hash: b65e47382e3219585a1654ca2be726e564ed95d5
