--- a/deliverables/pike/oslo.vmware.yaml
+++ b/deliverables/pike/oslo.vmware.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/oslo.vmware
     hash: c5aed4fe30a3e3d9e82ca57015668cedc1394ed1
+- version: 2.23.0
+  projects:
+  - repo: openstack/oslo.vmware
+    hash: 0aeed64bbb60581989436102ad68268d92024947
