--- a/deliverables/pike/oslotest.yaml
+++ b/deliverables/pike/oslotest.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslotest
     hash: 952b6225d5134b4e18d08efb9347aa7198235a5f
+- version: 2.17.0
+  projects:
+  - repo: openstack/oslotest
+    hash: 491d9ca9c4681b937e3e80cc09ab85a4b4903671
