--- a/deliverables/pike/osprofiler.yaml
+++ b/deliverables/pike/osprofiler.yaml
@@ -33,3 +33,7 @@ releases:
   projects:
   - repo: openstack/osprofiler
     hash: 343fe299bf637762f8da680d7d7b5f6117b1661b
+- version: 1.11.0
+  projects:
+  - repo: openstack/osprofiler
+    hash: ba4732d68a4ad4cbbab282d5328b82bdda564ffd
