--- a/deliverables/pike/stevedore.yaml
+++ b/deliverables/pike/stevedore.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/stevedore
     hash: 7357e8aef053cf3d7c3268a794f0d70c86c7ade1
+- version: 1.25.0
+  projects:
+  - repo: openstack/stevedore
+    hash: b18bd78569abd2633d6c87d60772cd1e8830f2ea
