--- a/deliverables/pike/debtcollector.yaml
+++ b/deliverables/pike/debtcollector.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/debtcollector
     hash: 9d3fbc726fb4bb5699bb6eec2dfeb51cc0e762f0
+- version: 1.17.0
+  projects:
+  - repo: openstack/debtcollector
+    hash: cd6ba6b1224e527c36e976a25c0e06d311ebb2d9
