--- a/deliverables/pike/futurist.yaml
+++ b/deliverables/pike/futurist.yaml
@@ -26,3 +26,7 @@ releases:
   projects:
   - repo: openstack/futurist
     hash: 41709d75e8157888631d5df589d217c2b871944f
+- version: 1.3.0
+  projects:
+  - repo: openstack/futurist
+    hash: 549c4aaaaa18ec2a15766fbbf852196c5934eb37
