--- a/deliverables/pike/oslo.log.yaml
+++ b/deliverables/pike/oslo.log.yaml
@@ -49,3 +49,7 @@ releases:
   projects:
   - repo: openstack/oslo.log
     hash: 4e9d16d30b97d1f4ecd0b6aa313f62ddd8236922
+- version: 3.30.0
+  projects:
+  - repo: openstack/oslo.log
+    hash: 8bb44cdedd7715e35614044b86e71e0fc308ae8b
