--- a/deliverables/pike/oslo.privsep.yaml
+++ b/deliverables/pike/oslo.privsep.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/oslo.privsep
     hash: 8c96cfd08c2976c722d6d09b54e99fabdc24ac51
+- version: 1.22.0
+  projects:
+  - repo: openstack/oslo.privsep
+    hash: d24b988022403a6fff23422cdac73fdc7e153124
