--- a/deliverables/pike/taskflow.yaml
+++ b/deliverables/pike/taskflow.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/taskflow
     hash: f07ae69d65882d15a60b515666580055c45b2e93
+- version: 2.14.0
+  projects:
+  - repo: openstack/taskflow
+    hash: 72db32b7520c9d7b69c3f9839f531dc7582780bf
